# ChangeLog for media-gfx/gnome-scan
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gnome-scan/Attic/ChangeLog,v 1.2 2009/08/30 16:00:49 volkmar Exp $

  30 Aug 2009; Mounir Lamouri <volkmar@gentoo.org> gnome-scan-0.6.2.ebuild:
  Tested and keywording for ~x86 per maintainer request

*gnome-scan-0.6.2 (18 Aug 2009)

  18 Aug 2009; Romain Perier <mrpouet@gentoo.org> +gnome-scan-0.6.2.ebuild,
  +metadata.xml:
  New ebuild. Imported from sunrise and bug #149644. Thanks to Christian
  Strahl, Piotr Szymaniak and Mikel Olasagasti for their work.
