@@ -1,4 +1,4 @@
 DIST gnome-scan-0.6.2.tar.bz2 496726 RMD160 d7902c096b0e894bf5c9d8556eac087ea60ce1cc SHA1 ab1b77d9efa57294c57482c5f667175c2ccd1f78 SHA256 b7f5c616b70757eb238acbc9ca181db735491882abecedceab6316f842e2c1a7
-EBUILD gnome-scan-0.6.2.ebuild 818 RMD160 378826b9bb89b4727231bd1d03ccabfdba944768 SHA1 6f68fccf44260bc54948d7eb48a487568b80b6a7 SHA256 8bc7f51eb36c478e61fc4aa523eefc0e3e6036150d79007c672e7e61c56cc6e1
-MISC ChangeLog 610 RMD160 2491c0200e9f68cc77d169e242c266003ee26e18 SHA1 90aabe6afa149de9b5ba17f32c1ce089e214c8d1 SHA256 d829c0ab19655331167d585f19b32051b308e8f082d7aa264b6586d204cb4ced
+EBUILD gnome-scan-0.6.2.ebuild 842 RMD160 7068e2c59d50f1126cd4d164690cf97300725b36 SHA1 f426314b9176ac3dc0e58330c87aea94aec43a18 SHA256 590385c6d17f24fd5b46e65935858c623287ab719b21af3c37301e872b1536ba
+MISC ChangeLog 784 RMD160 f015e1e1985ad8ff61a2d93afa7714961c714103 SHA1 804ee8731118834360490ec50d06cd479f94f538 SHA256 429bd85858fd8411323d7667352aad832a997274444e8cce15df6e0f9179d799
 MISC metadata.xml 226 RMD160 542adb524868fed2285293c1bfdcfbd224d82f8b SHA1 615822767f49209d9da9b9ff5b29fc2524512537 SHA256 0564db379dc1ca078c88b60a22e4e1a4251f90ed78de91ce25b9759141334171
