@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gnome-scan/Attic/gnome-scan-0.6.2.ebuild,v 1.2 2009/08/30 16:00:49 volkmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gnome-scan/Attic/gnome-scan-0.6.2.ebuild,v 1.3 2009/11/01 17:31:26 mrpouet Exp $
 
 inherit gnome2
 
@@ -14,7 +14,8 @@ IUSE="debug doc"
 
 RDEPEND=">=x11-libs/gtk+-2.12
 	media-gfx/sane-backends
-	>=media-libs/gegl-0.0.21
+	~media-libs/gegl-0.0.22
+	~media-libs/babl-0.0.22
 	>=media-gfx/gimp-2.3
 	>=gnome-base/libglade-2.6
 	gnome-base/gconf"
