@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/gnome-scan
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gnome-scan/Attic/ChangeLog,v 1.2 2009/08/30 16:00:49 volkmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gnome-scan/Attic/ChangeLog,v 1.3 2009/11/01 17:31:26 mrpouet Exp $
+
+  01 Nov 2009; Romain Perier <mrpouet@gentoo.org>
+  gnome-scan-0.6.2.ebuild:
+  Add stricts deps on ~babl-0.0.22 and ~gegl-0.0.22 due to API/ABI changes
+  in 0.1.0 versions.
 
   30 Aug 2009; Mounir Lamouri <volkmar@gentoo.org> gnome-scan-0.6.2.ebuild:
   Tested and keywording for ~x86 per maintainer request
